# linkook

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  site_related.yml
.github/workflows/: python-package.yml
linkook/: linkook.py
linkook/ai/: persona_analyzer.py
linkook/outputer/: console_printer.py  result_writer.py  visualize_output.py
linkook/provider/: provider.json  provider.py  provider_manager.py
linkook/scanner/: scanner_manager.py  site_scanner.py
