[project]
name = "linkook"
version = "1.1.3"
authors = [
    { name = "Jack Ju1y", email = "ju1y0x0@proton.me" },
]
description = "A tool for scanning and enumerating linked social accounts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2",
    "colorama>=0.4.6"
]